--- a/css/style.css
+++ b/css/style.css
@@ -70,12 +70,13 @@ h4,
 h5,
 h6,
 .hfont {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   color: #202020;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 160%;
   margin: 0;
 }
+p {font-family: 'Nunito Sans', sans-serif;font-weight: 400;}
 h1 {
   font-size: 40px;
 }
@@ -649,15 +650,29 @@ article.portfolio h3 {
   z-index: 9999;
 }
 .portfolio-full .portfolio-description {
-  float: left;
-  width: 500px;
-  max-height: 100%;
+  /* float: left; */
+  /* width: 500px; */
+  /* max-height: 100%; */
   padding: 40px;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
+  position: absolute;
+  right:5vw;
+  bottom:5vh;
+  margin:auto;
+  z-index: 10000;
+  background-color: rgba(0, 0, 0, 0.75);
+  border: 4px solid white;
+
 }
 .portfolio-full .portfolio-description > * {
-  margin-bottom: 30px;
+  color:white!important;
+}
+.portfolio-full .portfolio-description h3 {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
+  font-size: 48px;
+
 }
 .portfolio-full .portfolio-description > *:last-child {
   margin-bottom: 0;
@@ -706,6 +721,9 @@ article.portfolio h3 {
   .portfolio-full .portfolio-description {
     float: none;
     width: 100%;
+    position:relative;
+    border:none;
+    border-bottom: 2px solid white;
   }
 }
 /*==========================================================*/
