--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,10 @@ hr {
 /* Typography
 /*==========================================================*/
 body {
-  font-family: 'Muli', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   color: #202020;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 180%;
   background: #000000;
 }
@@ -70,13 +70,13 @@ h4,
 h5,
 h6,
 .hfont {
-  font-family: 'Nunito Sans', sans-serif;
+  /* font-family: 'Nunito Sans', sans-serif; */
   color: #202020;
-  font-weight: 400;
+  /* font-weight: 400; */
   line-height: 160%;
   margin: 0;
 }
-p {font-family: 'Nunito Sans', sans-serif;font-weight: 400;}
+/* p {font-family: 'Nunito Sans', sans-serif;font-weight: 400;} */
 h1 {
   font-size: 40px;
 }
@@ -721,9 +721,18 @@ article.portfolio h3 {
   .portfolio-full .portfolio-description {
     float: none;
     width: 100%;
-    position:relative;
     border:none;
-    border-bottom: 2px solid white;
+    border-bottom: 4px solid white;
+    right:0;
+    bottom:inherit;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding:20px 20px 20px 30px;
+    }
+    .portfolio-full .portfolio-description h3 {
+      font-size: 40px;
+    }
+    .portfolio-full .portfolio-description .icon-text i{
+      width:30px;
   }
 }
 /*==========================================================*/
