--- a/css/style.css
+++ b/css/style.css
@@ -717,7 +717,7 @@ article.portfolio h3 {
 @media (max-width: 991px) {
   .portfolio-full {
     overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;    
+    -webkit-overflow-scrolling: touch;
     width: 100vw;
     height:100vh;
   }
@@ -729,7 +729,7 @@ article.portfolio h3 {
   .portfolio-full .portfolio-description {
     float: none;
     width: 100%;
-    border:none;   
+    border:none;
     right:0;
     bottom:inherit;
     background-color: rgba(0, 0, 0, 0.5);
@@ -743,10 +743,10 @@ article.portfolio h3 {
       margin-right: 10px;
       text-align: right;
   }
-  
+
 }
 @media (max-width: 991px) and (orientation: landscape) {
-  .portfolio-full .portfolio-description { 
+  .portfolio-full .portfolio-description {
     bottom:0;
     left:0;
     right:inherit;
@@ -754,7 +754,7 @@ article.portfolio h3 {
     align-items: center;
     justify-content: space-between;
     border-bottom:0;
-    border-top:2px solid white;   
+    border-top:2px solid white;
     padding: 0px 10px;
   }
   .portfolio-full .portfolio-description .icon-text i {
@@ -763,10 +763,10 @@ article.portfolio h3 {
     text-align: right;
   }
   .portfolio-full .portfolio-description h3 {
-      font-size: 30px;      
+      font-size: 30px;
   }
   .portfolio-full .portfolio-description .icont-text {
-    margin-bottom:0; 
+    margin-bottom:0;
   }
   .swiper-wrapper {
     height:100%!important;
@@ -1159,10 +1159,11 @@ article.personal-profile .inner h4 {
   -ms-transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  -webkit-transition: opacity 1.5s linear;
+  /* -webkit-transition: opacity 1.5s linear;
   transition: opacity 1.5s linear;
-  opacity: 0;
+  opacity: 0; */
 }
+/* #fullscreen-slider .swiper-slide img {opacity:1;} */
 #fullscreen-slider .swiper-slide-active h1 {
   opacity: 1;
 }
