--- a/css/style.css
+++ b/css/style.css
@@ -542,7 +542,7 @@ background-image: linear-gradient(315deg, #36669d 0%, #d3d3d3 74%);
   }
   #heading h1 {
     display: block;
-    font-size: 36px;
+    font-size: 32px;
   }
   #heading h2 {
     display: block;
@@ -673,6 +673,7 @@ article.portfolio h3 {
   font-family: 'Oswald', sans-serif;
   font-weight: 400;
   font-size: 48px;
+  text-transform: uppercase;
 
 }
 .portfolio-full .portfolio-description > *:last-child {
