--- a/css/style.css
+++ b/css/style.css
@@ -1579,11 +1579,12 @@ iframe {
 /*==========================================================*/
 /* Grid system
 /*==========================================================*/
-.container-fluid {
+.container-fluid, .container {
   margin-right: auto;
   margin-left: auto;
-  padding: 40px;
+  padding: 40px 20px;
 }
+
 .row {
   margin-left: -20px;
   margin-right: -20px;
@@ -1628,7 +1629,7 @@ iframe {
 /* Responsive */
 @media (min-width: 992px) {
   /* Spacing */
-  .container-fluid {
+  .container-fluid, .container {
     padding: 80px;
   }
   .inner .row:last-child > div > *:last-child {
@@ -1690,8 +1691,50 @@ iframe {
 /*==========================================================*/
 /* Gallery Grid
 /*==========================================================*/
+.grid-gallery {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
+  }
+  .col-gallery {
+    -ms-flex: 33%; /* IE10 */
+    flex: 33%;
+    max-width: 33%;
+    padding: 0 16px;
+  }
+  .col-gallery img {
+    margin-bottom: 32px;
+    vertical-align: middle;
+}
 
-.image.gallery-grid {padding-bottom:20px;}
+@media screen and (max-width:768px) {
+  .col-gallery {
+    padding: 0 6px;
+  }
+  .col-gallery img {
+    margin-bottom: 12px;
+  }
+}
+@media screen and (max-width:600px) {
+  .col-gallery {
+    -ms-flex: 100%;
+    flex: 100%;
+    max-width: 100%;
+  }
+
+  .col-gallery {
+    padding: 0 6px;
+  }
+  .col-gallery img {
+    margin-bottom: 12px;
+  }
+}
+
+
+
+
 
 /*==========================================================*/
 /* Team
