--- a/css/style.css
+++ b/css/style.css
@@ -1733,9 +1733,6 @@ iframe {
 }
 
 
-
-
-
 /*==========================================================*/
 /* Team
 /*==========================================================*/
@@ -1764,3 +1761,172 @@ iframe {
     article.team-card:first-of-type .inner {padding:20px;}
    article.team-card:first-of-type .inner p {line-height: 1.4;}
  }
+
+
+ /*==========================================================*/
+ /* Footer
+ /*==========================================================*/
+ .footer-section {
+   background: #151414;
+   position: relative;
+ }
+ .footer-cta {
+   border-bottom: 1px solid #373636;
+   padding-bottom:5px;
+   margin-bottom:30px;
+ }
+ .single-cta, .footer-widget {
+   padding:0 10px;
+ }
+ .single-cta i {
+   color: #444;
+   font-size: 30px;
+   float: left;
+   margin-top: 8px;
+   margin-right: 12px;
+ }
+ .cta-text {
+   padding-left: 15px;
+   display: inline-block;
+ }
+ .cta-text h4 {
+   color: #fff;
+   font-size: 20px;
+   font-weight: 600;
+   margin-bottom: 2px;
+ }
+ .cta-text span {
+   color: #757575;
+   font-size: 15px;
+ }
+ .footer-content {
+   position: relative;
+   z-index: 2;
+ }
+ .footer-pattern img {
+   position: absolute;
+   top: 0;
+   left: 0;
+   height: 330px;
+   background-size: cover;
+   background-position: 100% 100%;
+ }
+ .footer-logo {
+   margin-bottom: 30px;
+ }
+ .footer-logo img {
+     max-width: 200px;
+ }
+ .footer-text p {
+   margin-bottom: 14px;
+   font-size: 14px;
+       color: #7e7e7e;
+   line-height: 28px;
+ }
+ .footer-social-icon span {
+   color: #fff;
+   display: block;
+   font-size: 20px;
+   font-weight: 700;
+   font-family: 'Poppins', sans-serif;
+   margin-bottom: 20px;
+ }
+ .footer-social-icon a {
+   color: #fff;
+   font-size: 16px;
+   margin-right: 15px;
+ }
+ .footer-social-icon i {
+   height: 40px;
+   width: 40px;
+   text-align: center;
+   line-height: 38px;
+   border-radius: 50%;
+ }
+
+ .footer-widget-heading h3 {
+   color: #fff;
+   font-size: 20px;
+   font-weight: 600;
+   margin-bottom: 40px;
+   position: relative;
+ }
+ .footer-widget-heading h3::before {
+   content: "";
+   position: absolute;
+   left: 0;
+   bottom: -15px;
+   height: 2px;
+   width: 50px;
+   background: #444;
+ }
+ .footer-widget ul li {
+   display: inline-block;
+   float: left;
+   width: 50%;
+   margin-bottom: 12px;
+ }
+ .footer-widget ul li a:hover{
+   color: #444;
+ }
+ .footer-widget ul li a {
+   color: #878787;
+   text-transform: capitalize;
+ }
+ .subscribe-form {
+   position: relative;
+   overflow: hidden;
+ }
+ .subscribe-form input {
+   width: 100%;
+   padding: 14px 28px;
+   background: #2E2E2E;
+   border: 1px solid #2E2E2E;
+   color: #fff;
+ }
+ .subscribe-form button {
+     position: absolute;
+     right: 0;
+     background: #444;
+     padding: 13px 20px;
+     border: 1px solid #444;
+     top: 0;
+ }
+ .subscribe-form button i {
+   color: #fff;
+   font-size: 22px;
+   transform: rotate(-6deg);
+ }
+ .container-copy {
+   padding: 0 80px;
+ }
+ .copyright-area{
+   background: #202020;
+   padding: 25px 0;
+ }
+ .copyright-text p {
+   margin: 0;
+   font-size: 14px;
+   color: #878787;
+ }
+ .copyright-text p a{
+   color: #444;
+ }
+ .footer-menu li {
+   display: inline-block;
+   margin-left: 20px;
+ }
+ .footer-menu li:hover a{
+   color: #444;
+ }
+ .footer-menu li a {
+   font-size: 14px;
+   color: #878787;
+ }
+@media screen and (max-width:768px) {
+  .cta-text{margin-bottom: 10px;}
+  .cta-text h4 {font-size: 18px;margin-bottom: 0;}
+  .single-cta i {width:25px;}
+  .container-copy{padding:0 20px;}
+  .footer-menu li {margin-left:0; padding:0 5px;}
+}
