--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,9 @@ address {
   position: relative;
   overflow: hidden;
 }
+
+
+
 /*==========================================================*/
 /* Content
 /*==========================================================*/
@@ -300,6 +303,23 @@ background-image: linear-gradient(315deg, #36669d 0%, #d3d3d3 74%);
   -ms-transform: translate(300px, 0);
   -webkit-transform: translate(300px, 0);
   transform: translate(300px, 0);
+}
+
+#content::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.27);
+  background-color: transparent;
+}
+
+#content::-webkit-scrollbar
+{
+  width: 6px;
+  background-color: transparent;
+}
+
+#content::-webkit-scrollbar-thumb
+{
+  background-color: #4b6077;
 }
 /* Main and sidebar column responsiveness */
 @media (max-width: 991px) {
