Nuevo Quienes Somos

--- a/css/style.css
+++ b/css/style.css
@@ -614,7 +614,7 @@ article.portfolio .image {
   display: block;
   position: relative;
 }
-article.portfolio .image:before {
+/* article.portfolio .image:before {
   position: absolute;
   width: 32px;
   height: 28px;
@@ -645,21 +645,102 @@ article.portfolio .image:after {
 }
 article.portfolio .image:hover:after {
   opacity: 1;
-}
+} */
 article.portfolio .inner {
   padding: 20px 40px;
 }
 article.portfolio h3 {
-  font-size: 24px;
+  font-size: 34px;
 }
 @media (max-width: 991px) {
   article.portfolio .inner {
     text-align: center;
   }
 }
+
+
+
+article.portfolio .content-overlay {
+  background: rgba(0,0,0,0.7);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
+}
+
+article.portfolio:hover .content-overlay{
+  opacity: 1;
+}
+
+article.portfolio .content-details {
+  position: absolute;
+  text-align: center;
+  padding-left: 2em;
+  padding-right: 3em;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+  display: flex;
+  justify-content: flex-end;
+}
+
+article.portfolio:hover .content-details{
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+  /* text-align: center; */
+
+}
+
+article.portfolio .content-details h3{
+  color: #fff;
+  font-weight: 600;
+  letter-spacing: 0.15em;
+  margin-bottom: 0.5em;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  text-align: right;
+  display: table-caption;
+  border-right: 3px solid white;
+  padding-right: 10px;
+  max-width: min-content;
+  /* position: absolute;
+  right: 60px; */
+  line-height: 1.2;
+}
+
+article.portfolio .fadeIn-top{
+  top: 20%;
+}
+article.portfolio .fadeIn-right{
+  left: 80%;
+}
+
+@media screen and (max-width:1000px) {
+  article.portfolio .content-overlay {opacity:1;height:30%;top:inherit;}
+  article.portfolio .content-details {top:inherit;bottom:10px;opacity: 1;padding:0 1em;}
+  article.portfolio .fadeIn-right {left:50%;}
+  article.portfolio .content-details h3 {max-width: none;font-size: 24px;}
+}
+
 /*==========================================================*/
 /* Portfolio full
 /*==========================================================*/
+
 .portfolio-full {
   position: absolute;
   width: 100%;
@@ -874,6 +955,8 @@ article.personal-profile .inner h4 {
   opacity: 0.5;
   margin-top: 10px;
 }
+
+article.portfolio-todos .image {padding-top: 33%;}
 /* Responsive */
 @media (max-width: 991px) {
   article.personal-profile > div {
@@ -1183,6 +1266,9 @@ article.personal-profile .inner h4 {
   /* -webkit-transition: opacity 1.5s linear;
   transition: opacity 1.5s linear; */
   opacity: 1;
+  }
+  #fullscreen-slider video::-webkit-media-controls {
+    display:none !important;
 }
 
 /* Responsive */
@@ -1757,13 +1843,14 @@ iframe {
 /* Team
 /*==========================================================*/
 
+article.team-card .image {background-position: top center;}
  article.team-card .image:before, article.team-card .image:after {
   content:none;
  }
  article.team-card .image:hover {
    cursor:inherit;
  }
- article.team-card:first-of-type > div{height:410px;}
+ /* article.team-card:first-of-type > div{height:410px;} */
  article.team-card:first-of-type .inner header {margin-bottom: 10px!important;}
   article.team-card:first-of-type .inner {padding:20px 40px;}
 
