--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,18 @@
   font-family: 'Lato';
   font-style: normal;
   font-weight: 300;
-  src: url('fonts/lato-v14-latin-300.eot');
+  src: url('../fonts/lato-v14-latin-300.eot');
   /* IE9 Compat Modes */
   src: local('Lato Light'), local('Lato-Light'),
-    url('fonts/lato-v14-latin-300.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/lato-v14-latin-300.eot?#iefix') format('embedded-opentype'),
     /* IE6-IE8 */
-    url('fonts/lato-v14-latin-300.woff2') format('woff2'),
+    url('../fonts/lato-v14-latin-300.woff2') format('woff2'),
     /* Super Modern Browsers */
-    url('fonts/lato-v14-latin-300.woff') format('woff'),
+    url('../fonts/lato-v14-latin-300.woff') format('woff'),
     /* Modern Browsers */
-    url('fonts/lato-v14-latin-300.ttf') format('truetype'),
+    url('../fonts/lato-v14-latin-300.ttf') format('truetype'),
     /* Safari, Android, iOS */
-    url('fonts/lato-v14-latin-300.svg#Lato') format('svg');
+    url('../fonts/lato-v14-latin-300.svg#Lato') format('svg');
   /* Legacy iOS */
 }
 
@@ -23,18 +23,18 @@
   font-family: 'Lato';
   font-style: normal;
   font-weight: 400;
-  src: url('fonts/lato-v14-latin-regular.eot');
+  src: url('../fonts/lato-v14-latin-regular.eot');
   /* IE9 Compat Modes */
   src: local('Lato Regular'), local('Lato-Regular'),
-    url('fonts/lato-v14-latin-regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/lato-v14-latin-regular.eot?#iefix') format('embedded-opentype'),
     /* IE6-IE8 */
-    url('fonts/lato-v14-latin-regular.woff2') format('woff2'),
+    url('../fonts/lato-v14-latin-regular.woff2') format('woff2'),
     /* Super Modern Browsers */
-    url('fonts/lato-v14-latin-regular.woff') format('woff'),
+    url('../fonts/lato-v14-latin-regular.woff') format('woff'),
     /* Modern Browsers */
-    url('fonts/lato-v14-latin-regular.ttf') format('truetype'),
+    url('../fonts/lato-v14-latin-regular.ttf') format('truetype'),
     /* Safari, Android, iOS */
-    url('fonts/lato-v14-latin-regular.svg#Lato') format('svg');
+    url('../fonts/lato-v14-latin-regular.svg#Lato') format('svg');
   /* Legacy iOS */
 }
 
